--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ Denetimsiz öğrenmenin merkezinde iki ana konu bulunmaktadır: kümeleme ve boy
 
 Boyut indirgeme, özelliklerin veya boyutların sayısını azaltarak karmaşık verileri basitleştirmekle ilgilidir. Ayrıntılı bir resim düşünün; boyut indirgeme orijinalin özünü koruyan daha basit, soyut bir temsil oluşturmaya yardımcı olur. Unutulmamalıdır ki makinelerle yaptığımız her işlemin arka planda makineye bir maliyeti vardır. Tıpkı iş yerinde size verilen bir görev, ya da okulda yapmanız gereken bir ödev gibi. Bu tarz görevlerin yerine getirilmesi için vakit, emek ve belki çok daha fazlasını harcamanız gerekir. Ancak size verilen görev ne kadar basitse, yapacağınız harcamalar da aynı nicelikte azalacaktır. Boyut indirgeme de tam olarak bunu yapmaktadır. Boyutunu indirgediğimiz bir veri seti, makinenin daha az yorulmasına ve maliyetinin azalmasına olanak sağlayacaktır. Üstelik tek artısının bu olduğunu da söyleyemeyiz. Bu kitaba ulaşabilen bir çoğunuzun da bilebileceği gibi veri setlerinin görselleştirilmesi üç boyutla sınırlıdır. Üçüncü boyut, yani bir başka deyişle üç değişkenli, veri setleri dışında, daha fazla değişkene sahip veri setlerini görselleştirmek mümkün değildir. Fakat örneğin on beş değişkenli bir setinin boyutunu iki değişkene düşürürsek, sizin de tahmin edebileceğimiz gibi veri seti görselleştirilebilir bir hale gelecektir. Tüm bunlar hesaba katıldığında ise boyut indirgemenin bizi boyutu büyük bir lanetten kurtaran, tonton algoritma büyücüsü olduğunu söyleyebiliriz.
 
-Bu kitabın kalan kısmında çeşitli kümeleme algoritmalarıyla birlikte boyut indirgeme tekniklerinden Temel Bileşen Analizinin nasıl çalıştığını, adım adım nasıl hesaplandığını ve R'da nasıl uygulanacağını göreceğiz. Ayrıca kitabın en sonunda yer alan Alıştırma bölümüyle öğrendiklerinizi sınayabilir, hatta pekiştirebilirsiniz. Unutmayın ki makine öğrenmesi bir buz dağı ise öğretmek görünen, öğrenmek ise buz dağının görünmeyen kısmıdır. Eğer birçok veri seti ile öğrendiğiniz şeyleri tekrar tekrar denemezseniz aslında hiçbir şey öğrenmemiş olacaksınız. Tüm bunlar düşünüldüğünde umarım bu kitap sizin için faydalı olacaktır.
+Bu kitabın kalan kısmında çeşitli kümeleme algoritmalarıyla birlikte boyut indirgeme tekniklerinden Temel Bileşen Analizinin nasıl çalıştığını, adım adım nasıl hesaplandığını ve R ile Python programlama dillerinde nasıl uygulanacağını göreceğiz. Ayrıca kitabın en sonunda yer alan Alıştırma bölümüyle öğrendiklerinizi sınayabilir, hatta pekiştirebilirsiniz. Unutmayın ki makine öğrenmesi bir buz dağı ise öğretmek görünen, öğrenmek ise buz dağının görünmeyen kısmıdır. Eğer birçok veri seti ile öğrendiğiniz şeyleri tekrar tekrar denemezseniz aslında hiçbir şey öğrenmemiş olacaksınız. Tüm bunlar düşünüldüğünde umarım bu kitap sizin için faydalı olacaktır.
 
 # 2. Optimum Küme Sayısının Seçilmesi
 
